[package]
name = "must-done"
version = "0.1.0"
edition = "2021"

authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["asynchronous"]
description = "An experimental Future that is guaranteed to be done"
keywords = ["future", "async"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihciah/must-done"

[dependencies]
pin-project-lite = { version = "0.2" }
